--- a/snake.html
+++ b/snake.html
@@ -3,9 +3,12 @@
         <title>Snake Game</title>
     </head>
 
-    <body>
-        <h1> THANK FOR WATCHING ME! PLEASE LIKE AND SUBSCRIBE</h1>
-        <canvas id="canvas" width="400" height="400"></canvas>
+    <body style="background-color: rgb(0, 255, 157);">
+        <h1 style="text-align: center;">Snake Game</h1>  
+
+        <div style="text-align: center;"> 
+            <canvas id="canvas" width="500" height="500" style="border: 1px solid #000000;"></canvas>
+        </div>
         <script src="game.js"></script>
     </body>
 </html>
